--- a/src/gui.glade
+++ b/src/gui.glade
@@ -440,10 +440,9 @@ r</property>
   </object>
   <object class="GtkDialog" id="configdialog">
     <property name="border_width">5</property>
+    <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
-    <property name="default_width">600</property>
-    <property name="default_height">480</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
@@ -469,7 +468,7 @@ r</property>
                         <property name="n_rows">4</property>
                         <property name="n_columns">4</property>
                         <property name="column_spacing">2</property>
-                        <property name="row_spacing">2</property>
+                        <property name="row_spacing">5</property>
                         <child>
                           <object class="GtkLabel" id="config_label_type1">
                             <property name="visible">True</property>
@@ -554,33 +553,39 @@ r</property>
                             <child>
                               <object class="GtkAlignment" id="alignment3">
                                 <property name="visible">True</property>
-                                <property name="left_padding">12</property>
+                                <property name="top_padding">5</property>
+                                <property name="bottom_padding">5</property>
+                                <property name="left_padding">5</property>
+                                <property name="right_padding">5</property>
                                 <child>
                                   <object class="GtkTable" id="config_table_ai_player1">
                                     <property name="visible">True</property>
                                     <property name="n_rows">3</property>
                                     <property name="n_columns">4</property>
                                     <property name="column_spacing">2</property>
-                                    <property name="row_spacing">2</property>
+                                    <property name="row_spacing">5</property>
                                     <child>
                                       <object class="GtkLabel" id="label3">
                                         <property name="visible">True</property>
+                                        <property name="xalign">0</property>
                                         <property name="label" translatable="yes">AI type: </property>
                                       </object>
                                       <packing>
-                                        <property name="x_options"></property>
+                                        <property name="right_attach">2</property>
+                                        <property name="x_options">GTK_FILL</property>
                                         <property name="y_options">GTK_FILL</property>
                                       </packing>
                                     </child>
                                     <child>
                                       <object class="GtkLabel" id="label4">
                                         <property name="visible">True</property>
+                                        <property name="xalign">0</property>
                                         <property name="label" translatable="yes">Depth: </property>
                                       </object>
                                       <packing>
-                                        <property name="top_attach">1</property>
-                                        <property name="bottom_attach">2</property>
-                                        <property name="x_options"></property>
+                                        <property name="left_attach">2</property>
+                                        <property name="right_attach">3</property>
+                                        <property name="x_options">GTK_FILL</property>
                                         <property name="y_options">GTK_FILL</property>
                                       </packing>
                                     </child>
@@ -597,27 +602,31 @@ r</property>
                                         <property name="update_policy">if-valid</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">1</property>
-                                        <property name="right_attach">2</property>
+                                        <property name="left_attach">2</property>
+                                        <property name="right_attach">3</property>
                                         <property name="top_attach">1</property>
                                         <property name="bottom_attach">2</property>
                                         <property name="x_options">GTK_FILL</property>
+                                        <property name="y_options">GTK_FILL</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
+                                      <object class="GtkTextView" id="textview_heuristic_player1">
+                                        <property name="height_request">75</property>
+                                        <property name="visible">True</property>
+                                        <property name="sensitive">False</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="editable">False</property>
+                                        <property name="wrap_mode">word</property>
+                                        <property name="cursor_visible">False</property>
+                                      </object>
+                                      <packing>
+                                        <property name="right_attach">4</property>
+                                        <property name="top_attach">2</property>
+                                        <property name="bottom_attach">3</property>
+                                        <property name="x_padding">2</property>
+                                        <property name="y_padding">10</property>
+                                      </packing>
                                     </child>
                                     <child>
                                       <placeholder/>
@@ -648,7 +657,7 @@ r</property>
                             <property name="top_attach">2</property>
                             <property name="bottom_attach">4</property>
                             <property name="x_padding">2</property>
-                            <property name="y_padding">2</property>
+                            <property name="y_padding">5</property>
                           </packing>
                         </child>
                         <child>
@@ -690,7 +699,7 @@ r</property>
                         <property name="n_rows">4</property>
                         <property name="n_columns">4</property>
                         <property name="column_spacing">2</property>
-                        <property name="row_spacing">2</property>
+                        <property name="row_spacing">5</property>
                         <child>
                           <object class="GtkLabel" id="config_label_type2">
                             <property name="visible">True</property>
@@ -774,33 +783,39 @@ r</property>
                             <child>
                               <object class="GtkAlignment" id="alignment4">
                                 <property name="visible">True</property>
-                                <property name="left_padding">12</property>
+                                <property name="top_padding">5</property>
+                                <property name="bottom_padding">5</property>
+                                <property name="left_padding">5</property>
+                                <property name="right_padding">5</property>
                                 <child>
                                   <object class="GtkTable" id="config_table_ai_player2">
                                     <property name="visible">True</property>
                                     <property name="n_rows">3</property>
                                     <property name="n_columns">4</property>
                                     <property name="column_spacing">2</property>
-                                    <property name="row_spacing">2</property>
+                                    <property name="row_spacing">5</property>
                                     <child>
                                       <object class="GtkLabel" id="label5">
                                         <property name="visible">True</property>
+                                        <property name="xalign">0</property>
                                         <property name="label" translatable="yes">AI type: </property>
                                       </object>
                                       <packing>
-                                        <property name="x_options"></property>
+                                        <property name="right_attach">2</property>
+                                        <property name="x_options">GTK_FILL</property>
                                         <property name="y_options">GTK_FILL</property>
                                       </packing>
                                     </child>
                                     <child>
                                       <object class="GtkLabel" id="label6">
                                         <property name="visible">True</property>
+                                        <property name="xalign">0</property>
                                         <property name="label" translatable="yes">Depth: </property>
                                       </object>
                                       <packing>
-                                        <property name="top_attach">1</property>
-                                        <property name="bottom_attach">2</property>
-                                        <property name="x_options"></property>
+                                        <property name="left_attach">2</property>
+                                        <property name="right_attach">3</property>
+                                        <property name="x_options">GTK_FILL</property>
                                         <property name="y_options">GTK_FILL</property>
                                       </packing>
                                     </child>
@@ -817,27 +832,31 @@ r</property>
                                         <property name="update_policy">if-valid</property>
                                       </object>
                                       <packing>
-                                        <property name="left_attach">1</property>
-                                        <property name="right_attach">2</property>
+                                        <property name="left_attach">2</property>
+                                        <property name="right_attach">3</property>
                                         <property name="top_attach">1</property>
                                         <property name="bottom_attach">2</property>
                                         <property name="x_options">GTK_FILL</property>
+                                        <property name="y_options">GTK_FILL</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
+                                      <object class="GtkTextView" id="textview_heuristic_player2">
+                                        <property name="height_request">75</property>
+                                        <property name="visible">True</property>
+                                        <property name="sensitive">False</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="editable">False</property>
+                                        <property name="wrap_mode">word</property>
+                                        <property name="cursor_visible">False</property>
+                                      </object>
+                                      <packing>
+                                        <property name="right_attach">4</property>
+                                        <property name="top_attach">2</property>
+                                        <property name="bottom_attach">3</property>
+                                        <property name="x_padding">2</property>
+                                        <property name="y_padding">10</property>
+                                      </packing>
                                     </child>
                                     <child>
                                       <placeholder/>
@@ -868,7 +887,7 @@ r</property>
                             <property name="top_attach">2</property>
                             <property name="bottom_attach">4</property>
                             <property name="x_padding">2</property>
-                            <property name="y_padding">2</property>
+                            <property name="y_padding">5</property>
                           </packing>
                         </child>
                         <child>
